# Voluntus

./: .gitignore  CMakeLists.txt  README.md  find_missing_chinese.py  sdkconfig
components/air/: CMakeLists.txt  air.cpp  air.h
components/backlight/: CMakeLists.txt  backlight.cpp  backlight.h
components/button_control/: CMakeLists.txt  button_control.cpp  button_control.h
components/clock_manager/: CMakeLists.txt  clock_manager.h
components/config_page/: CMakeLists.txt  config_page.cpp  config_page.h
components/eez-framework/: CMakeLists.txt
components/idle_manager/: CMakelists.txt  idle_manager.cpp  idle_manager.h
components/my_mqtt/: CMakeLists.txt  my_mqtt.cpp  my_mqtt.h
components/rs485/: CMakeLists.txt  rs485.cpp  rs485.h
components/time_sync/: CMakeLists.txt  time_sync.h
components/ui/: CMakelists.txt  actions.cpp  actions.h  fonts.h  images.c  images.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui.h  vars.h
components/ui/fonts/: ui_font_ping_fang14.c  ui_font_ping_fang18.c  ui_font_ping_fang22.c  ui_font_ping_fang32.c  ui_font_ping_fang70.c  ui_font_ping_fang78.c
components/ui/images/: ui_image_add.c  ui_image_background.c  ui_image_btn.c  ui_image_cooling.c  ui_image_dec.c  ui_image_fan_auto.c  ui_image_fan_high.c  ui_image_fan_low.c  ui_image_fan_mid.c  ui_image_fan_speed_btn.c  ui_image_ffff.c  ui_image_mmmm.c  ui_image_mode_fan.c  (+3 more)
components/utils/: CMakelists.txt  utils.h
components/wifi/: CMakelists.txt  wifi.cpp  wifi.h
components/xzbgs3_gui_driver/: CMakelists.txt  st7701s.c  xzbgs3_gui.c
main/: CMakeLists.txt  main.cpp
